--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,9 +17,9 @@
         app:maxImageSize="45dp"
         app:srcCompat="@drawable/baseline_arrow_back_24"
         app:tint="@color/text_col"
+        tools:ignore="MissingConstraints,SpeakableTextPresentCheck"
         tools:layout_editor_absoluteX="24dp"
-        tools:layout_editor_absoluteY="24dp"
-        tools:ignore="MissingConstraints" />
+        tools:layout_editor_absoluteY="24dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
@@ -71,7 +71,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/etpassword"
         app:layout_constraintVertical_bias="1.0"
-        app:passwordToggleEnabled="true">
+        app:passwordToggleEnabled="true"
+        tools:ignore="NotSibling">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etpassword"
@@ -80,7 +81,8 @@
             android:ems="5"
             android:hint="Password"
             android:inputType="textPassword"
-            android:textColorHint="@color/grey_light" />
+            android:textColorHint="@color/grey_light"
+            tools:ignore="TouchTargetSizeCheck" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
